improved layouts and fixed heights with scrolling, styled scrollbars

--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -144,7 +144,7 @@ table{
     align-items: center;
 }
 td{
-    text-wrap: nowrap;
+    text-wrap:balance;
 }
 /*******************************************/
 /*! BACKGROUND COLORS
@@ -348,7 +348,7 @@ body{
 header,
 main,
 footer{
-    width: 1000px;
+    height: inherit;
     overflow:hidden;
 }
 header{
@@ -356,7 +356,7 @@ header{
 }
 .main-height{
     height: 200px;
-    overflow: hidden;
+    overflow: scroll;
 }
 footer{
     height: 136px;
@@ -374,8 +374,8 @@ button,
     width: 50%;
 }
 .big-section{
-    overflow: hidden;
-    width: 600px;
+    /* overflow: hidden; */
+    /* width: 600px; */
 }
 /* .half-section{
     width: 50%;
@@ -647,7 +647,7 @@ button,
 /*! TABLE
 /*******************************************/
 table {
-  position: relative;
+  position: relative; /*this keeps row highlight from expanding to whole page width*/
 }
 
 .rowlink::before {
@@ -657,31 +657,31 @@ table {
   left: 0;
   width: 100%;
   height: 1.5em; /* don't forget to set the height! */
+}
+
 
 /* ===== Scrollbar CSS ===== */
   /* Firefox */
 * {
     scrollbar-width: thin;
-    scrollbar-color: #ae00ff #000000;
+    scrollbar-color: #ae00ff;
 }
 
 /* Chrome, Edge, and Safari */
-*::-webkit-scrollbar {
+::-webkit-scrollbar {
     width: 6px;
 }
 
-*::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
     background: #000000;
 }
 
-*::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
     background-color: #ae00ff;
     border-radius: 0px;
     border: 0px none #000000;
 }
+
 /*******************************************/
 /*! CUSTOM SELECT MENU/ DROPDOWN
 /*******************************************/
-.custom-select{
-
-}
